<resources>
    <string name="app_name">MyWeather</string>
    <string name="my_weather">My Weather</string>
    <string name="add_location">Add location</string>
    <string name="remove_location">Remove</string>
    <string name="search_location">Search location</string>
    <string name="add_location_subtitle">Search for a new location to add in the weather feed:</string>
    <string name="weather_temperature">%1$.1f °C</string>
    <string name="weather_temp_min_max">min %1$s °C - max %2$s °C</string>
    <string name="weather_wind_speed">wind speed: %1$.1f m/s</string>
    <string name="weather_pressure">pressure: %1$d hPa</string>
    <string name="weather_humidity">humidity: %1$d %%</string>
    <string name="weather_last_updated">last update: %1$s</string>
    <string name="weather_sunrise_sunset">sunrise: %1$s - sunset: %2$s</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="widget_finish_configuration">Finish Configuration</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>