<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MyWeather.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MyWeatherT.AppWidgetContainer">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/widget_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="Milano - it" />

            <TextView
                android:id="@+id/widget_location_coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="coordinates" />

            <TextView
                android:id="@+id/widget_weather_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="clear sky" />

            <TextView
                android:id="@+id/widget_weather_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_temperature"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="23 °C - feels like 21 °C" />

            <TextView
                android:id="@+id/widget_weather_max_min_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_temp_min_max"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="min 17 °C - max 24 °C" />

            <TextView
                android:id="@+id/widget_weather_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_wind_speed"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="wind speed" />

            <TextView
                android:id="@+id/widget_weather_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_pressure"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="pressure" />

            <TextView
                android:id="@+id/widget_weather_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_humidity"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="humidity" />

            <TextView
                android:id="@+id/widget_weather_last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_last_updated"
                android:textSize="@dimen/widget_standard_text_dimension"
                tools:text="timestamp" />

        </LinearLayout>

        <Button
            android:id="@+id/widget_refresh_weather_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.15"
            android:textSize="@dimen/widget_standard_text_dimension"
            app:icon="@drawable/ic_baseline_refresh_24"
            app:iconGravity="end" />

    </LinearLayout>


</RelativeLayout>

    <!--style="@style/Widget.MyWeather.AppWidget.InnerView"-->